<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="signup_text">Don\'t have an account!Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="error_msg">Enter all the data: Username, Password, Email</string>
    <string name="login_error_msg">Enter all the data: Username and Password</string>
    <string name="menu_logout_label">LogOut</string>
    <string name="empty_inbox">No new message!</string>
    <string name="empty_friends">Add Freinds to begin!</string>
    <string name="menu_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="menu_camera_label">Camera</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry! there was an error!</string>
    <string name="video_file_size_warning">Selected videos must be less than 10MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_msg">Choose some friends first!</string>
    <string name="menu_send_label">send</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was a problem with sending your message. Please try again</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="error_selecting_file">There was a problem with file selecting. Please select another file</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="content_desc_user_avatar">User Avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>

</resources>
